--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -35,37 +35,35 @@
                                 <span style="display:inline-block">
                                    <div ng-if="data.name">
                                      <span style="font-weight: 500;font-size:90%">{{data.name}}</span>
-                                     <!-- <span style="font-weight: 400;font-size:75%">{{data.company? data.company:'-'}}</span> -->
                                    </div>
-
                                    <span style="font-size:83%">{{data.uid}}</span>
-                                     <!-- <span ng-if="data.chatDuration>0.0" style="font-size:80%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
-
-                                     <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;color:red">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span>
-                                     <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;color:green">Rating :{{data.customerRating}} <i class="fa fa-star fa-md" aria-hidden="true"></i></span> -->
-
                                    <div>
                                      <span ng-if="data.chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
-                                     <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;background-color:#F97E7EE6">
-                                        <i class="fa fa-star fa-md" aria-hidden="true"></i> {{data.customerRating}}
-                                    </span>
-                                     <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;background-color:#A1F298">
-                                        <i class="fa fa-star fa-md" aria-hidden="true"></i> {{data.customerRating}}
-                                    </span>
                                    </div>
                                    <div class="tabel_dataStatus" style="font-size:80%">
                                      <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}</span>
-                                     <span ng-if="data.status=='late'" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='started'" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='closed'" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='reviewed'" style="color:brown"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="data.status=='resolved'" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
                                    </div>
                                  </span>
-                                 <span style="float:right;margin-left: 2rem;opacity:0.6;padding:5px">
-                                   <i ng-if="data.typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
-                                   <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                                 <span style="float:right;opacity:0.6;padding:5px;text-align:center">
+                                   <i ng-if="data.typ=='audio'" class="fa fa-phone fa-md" aria-hidden="true"></i>
+                                   <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-md" aria-hidden="true"></i>
+                                   <i ng-if="data.typ!='video'&&data.typ!='audio'" class="fa fa-commenting-o fa-md" aria-hidden="true"></i>
+                                   <div class="tabel_dataStatus" style="font-size:80%">
+                                     <span ng-if="data.status=='late'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
+                                     <span ng-if="data.status=='started'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
+                                     <span ng-if="data.status=='closed'&&data.user_id" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
+                                     <span ng-if="data.status=='reviewed'&&data.user_id" style="color:brown"><b>{{data.status|humanize}}</b></span>
+                                     <span ng-if="data.status=='resolved'&&data.user_id" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
+                                     <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
+                                  </div>
+                                  <div ng-if="data.chatDuration>0.0">
+                                    <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
+                                    <i class="fa fa-star fa-md" aria-hidden="true"></i>
+                                   </span>
+                                    <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:green">{{data.customerRating}}
+                                        <i class="fa fa-star fa-md" aria-hidden="true"></i>
+                                   </span>
+                                  </div>
                                  </span>
                               </td>
                             </tr>
@@ -134,17 +132,19 @@
                                   <option ng-repeat="chatType in chatTypes" value="{{chatType}}">{{chatType}}</option>
                                 </select>
                             </div>
-                            <div class="btn-group-vertical">
-                              <button type="button" class="btn btn-primary" ng-click="filterData()">
-                                <strong>Filter</strong>
-                              </button>
-                           </div>
+
                            <div class="form-group login-input-group" style="margin-top:20px">
                             <label>Sort By:</label>
                             <select class="form-control" ng-model="selectedSortOption.value" style="border:none">
                               <option ng-repeat="sort in sortOptions" value="{{sort}}">{{sort}} </option>
                             </select>
                           </div>
+
+                          <div class="btn-group-vertical">
+                            <button type="button" class="btn btn-primary" ng-click="filterData()">
+                              <strong>Filter</strong>
+                            </button>
+                         </div>
                         </div>
                       </div>
 
@@ -161,7 +161,7 @@
                             <div class="card" style="margin-bottom:-2px; border-radius:4px 4px 0px 0px; padding:10px;">
                                 <div class="row" style="padding:0px 10px; min-height:120px;">
                                   <div class="col-md-8">
-                                    <h6>Agent Name : {{r.user_id | getName}}</h6>
+                                    <!-- <h6>Agent Name : {{r.user_id | getName}}</h6> -->
                                     <h6>UID : {{r.uid}}</h6>
                                     <h6>Date : {{r.created | date : "dd-MMM-yyyy"}}</h6>
                                     <h6 ng-if="r.email">Visitor's Email : {{r.email}}</h6>
@@ -253,17 +253,19 @@
                                <option ng-repeat="chatType in chatTypes" value="{{chatType}}">{{chatType}}</option>
                              </select>
                          </div>
-                         <div class="btn-group-vertical">
-                           <button type="button" class="btn btn-primary" ng-click="filterData()">
-                             <strong>Filter</strong>
-                           </button>
-                        </div>
+
                         <div class="form-group" style="margin-top:20px">
                          <label>Sort By:</label>
                          <select class="form-control" ng-model="selectedSortOption.value">
                            <option ng-repeat="sort in sortOptions" value="{{sort}}">{{sort}} </option>
                          </select>
                        </div>
+
+                       <div class="btn-group-vertical">
+                         <button type="button" class="btn btn-primary" ng-click="filterData()">
+                           <strong>Filter</strong>
+                         </button>
+                      </div>
                      </div>
                  </div>
 
@@ -303,32 +305,34 @@
                                  <div ng-if="data.name">
                                    <span style="font-weight: 500;font-size:90%">{{data.name}}</span>
                                  </div>
-
                                  <span style="font-size:83%">{{data.uid}}</span>
                                  <div>
                                    <span ng-if="data.chatDuration>0.0" style="font-size:90%"><i class="fa fa-clock-o" aria-hidden="true"></i>  {{data.chatDuration}} Min</span>
-                                   <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem .3rem;background-color:#F97E7EE6">
-                                      <i class="fa fa-star fa-md" aria-hidden="true"></i> {{data.customerRating}}
-                                  </span>
-                                   <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem .3rem;background-color:#A1F298">
-                                      <i class="fa fa-star fa-md" aria-hidden="true"></i> {{data.customerRating}}
-                                  </span>
                                  </div>
                                  <div class="tabel_dataStatus" style="font-size:80%">
                                    <span style="background:#fff;" ><i class="fa fa-calendar-o" aria-hidden="true"></i> {{data.created|  date : 'dd-MMM-yyyy'}}</span>
-                                   <!-- {{data.statusChat}} -->
-                                   <span ng-if="data.status=='late'" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='started'" style="color:green"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='closed'" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='reviewed'" style="color:brown"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="data.status=='resolved'" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
-                                   <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
-
                                  </div>
                                </span>
-                               <span style="float:right;margin-left: 2rem;opacity:0.6;padding:5px">
-                                 <i ng-if="data.typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
-                                 <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
+                               <span style="float:right;opacity:0.6;padding:5px;text-align:center">
+                                 <i ng-if="data.typ=='audio'" class="fa fa-phone fa-md" aria-hidden="true"></i>
+                                 <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-md" aria-hidden="true"></i>
+                                 <i ng-if="data.typ!='video'&&data.typ!='audio'" class="fa fa-commenting-o fa-md" aria-hidden="true"></i>
+                                 <div class="tabel_dataStatus" style="font-size:80%">
+                                   <span ng-if="data.status=='late'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
+                                   <span ng-if="data.status=='started'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
+                                   <span ng-if="data.status=='closed'&&data.user_id" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
+                                   <span ng-if="data.status=='reviewed'&&data.user_id" style="color:brown"><b>{{data.status|humanize}}</b></span>
+                                   <span ng-if="data.status=='resolved'&&data.user_id" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
+                                   <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
+                                </div>
+                                <div class="">
+                                  <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
+                                  <i class="fa fa-star fa-md" aria-hidden="true"></i>
+                                 </span>
+                                  <span ng-if="data.customerRating>3" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:green">{{data.customerRating}}
+                                      <i class="fa fa-star fa-md" aria-hidden="true"></i>
+                                 </span>
+                                </div>
                                </span>
                             </td>
                           </tr>
